feat: update question struct; udpate api to question
