# openapi/prenatal/v1/quiz.yaml
@@ -75,7 +75,31 @@ components:
         category:
           title: mojo.core.String
           type: string
-        correctAnswer:
+        createTime:
+          $ref: '#/components/schemas/mojo.core.Timestamp'
+        explanation:
+          title: mojo.core.String
+          type: string
+        id:
+          title: mojo.core.String
+          type: string
+        options:
+          items:
+            $ref: '#/components/schemas/prenatal.QuestionOption'
+          title: mojo.core.Array
+          type: array
+        question:
+          title: mojo.core.String
+          type: string
+        updateTime:
+          $ref: '#/components/schemas/mojo.core.Timestamp'
+      title: prenatal.Question
+      type: object
+    prenatal.QuestionOption:
+      description: ""
+      properties:
+        content:
+          description: 选项的描述
           title: mojo.core.String
           type: string
         createTime:
@@ -86,22 +110,47 @@ components:
         id:
           title: mojo.core.String
           type: string
-        options:
+        isCorrect:
+          title: mojo.core.Bool
+          type: boolean
+        option:
+          description: 选项
           title: mojo.core.String
           type: string
-        question:
+        questionCategory:
+          title: mojo.core.String
+          type: string
+        questionId:
           title: mojo.core.String
           type: string
         updateTime:
           $ref: '#/components/schemas/mojo.core.Timestamp'
-      title: prenatal.Question
+      title: prenatal.QuestionOption
       type: object
 info:
-  description: entity服务相关的接口
-  title: entity服务
+  description: quiz服务相关的接口
+  title: quzi服务
   version: 0.1.0
 openapi: 3.0.3
 paths:
+  /v1/Answer:
+    post:
+      description: ""
+      operationId: create_answer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/prenatal.Answer'
+        required: true
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/prenatal.Answer'
+          description: OK
+      summary: 新增answer
   /v1/questions:
     post:
       description: ""
